@@ -1,3 +1,9 @@
+2013-03-04  Alan Modra  <amodra@gmail.com>
+
+	* elf32-ppc.c (ppc_elf_relocate_section <R_PPC_PLTREL24>): Adjust
+	non-zero addends when relocatable, rather than addends >= 32768.
+	Always zero "addend" before applying relocation.
+
 2013-03-04  Nick Clifton  <nickc@redhat.com>
 
 	* archive64.c (bfd_elf64_archive_write_armap): Fix calculation of
@@ -1017,8 +1023,8 @@
 2013-01-07  Tom Tromey  <tromey@redhat.com>
 
 	* section.c (_bfd_std_section): Rename from std_section.
-        (bfd_com_section_ptr, bfd_und_section_ptr, bfd_abs_section_ptr)
-        (STD_SECTION): Update.
+	(bfd_com_section_ptr, bfd_und_section_ptr, bfd_abs_section_ptr)
+	(STD_SECTION): Update.
 	* bfd-in2.h: Rebuild.
 
 2013-01-04  Juergen Urban <JuergenUrban@gmx.de>
